--- a/source/catalog.html
+++ b/source/catalog.html
@@ -262,83 +262,93 @@
       </ul>
     </section>
     <section class="extra-catalog container">
-        <h2 class="extra-catalog__title title-line">Дополнительные товары</h2>
-      <ul class="extra-catalog__list">
-        <li class="extra-catalog__extra-card-item extra-card-item">
-          <h3 class="extra-card-item__title">Сахарозаменитель</h3>
-          <table class="extra-card-item__table">
-            <tbody>
-              <tr class="extra-card-item__row">
-                <td class="extra-card-item__feature">1 упаковка (100 г)</td>
-                <td class="extra-card-item__value">200 ₽</td>
-              </tr>
-            </tbody>
-          </table>
-          <a class="extra-card-item__button button" href="#">Заказать</a>
-        </li>
-        <li class="extra-catalog__extra-card-item extra-card-item">
-          <h3 class="extra-card-item__title">Питьевая вода</h3>
-          <table class="extra-card-item__table">
-            <tbody>
-              <tr class="extra-card-item__row">
-                <td class="extra-card-item__feature">5 литров</td>
-                <td class="extra-card-item__value">50 ₽</td>
-              </tr>
-            </tbody>
-          </table>
-          <a class="extra-card-item__button button" href="#">Заказать</a>
-        </li>
-        <li class="extra-catalog__extra-card-item extra-card-item">
-          <h3 class="extra-card-item__title">Молоко</h3>
-          <table class="extra-card-item__table">
-            <tbody>
-              <tr class="extra-card-item__row">
-                <td class="extra-card-item__feature">1 литр</td>
-                <td class="extra-card-item__value">100 ₽</td>
-              </tr>
-            </tbody>
-          </table>
-          <a class="extra-card-item__button button" href="#">Заказать</a>
-        </li>
-        <li class="extra-catalog__extra-card-item extra-card-item">
-          <h3 class="extra-card-item__title">Витамины</h3>
-          <table class="extra-card-item__table">
-            <tbody>
-              <tr class="extra-card-item__row">
-                <td class="extra-card-item__feature">1 упаковка (30 г)</td>
-                <td class="extra-card-item__value">300 ₽</td>
-              </tr>
-            </tbody>
-          </table>
-          <a class="extra-card-item__button button" href="#">Заказать</a>
-        </li>
-      </ul>
-    </section>
-    <section class="promotion container">
-      <div class="promotion__wrapper">
-        <h2 class="visually-hidden">Акция</h2>
-        <svg class="promotion__icon" width="78" height="80" viewBox="0 0 78 80" xmlns="http://www.w3.org/2000/svg"
-          fill="none">
-          <path d="M64.02 34.71H14.03a3.17 3.17 0 0 1-3.18-3.16v-9.47a3.17 3.17 0 0 1 3.18-3.16h49.98a3.17
-            3.17 0 0 1 3.19 3.16v9.47a3.17 3.17 0 0 1-3.18 3.16ZM14.03 21.35c-.4 0-.74.33-.74.73v9.47c0
-            .41.33.74.74.74h49.98c.41 0 .75-.33.75-.74v-9.47c0-.4-.34-.73-.75-.73H14.03Z" fill="#fff">
-          </path>
-          <path d="M57.04 67.15H21a6.11 6.11 0 0 1-6.13-6.09V33.5c0-.67.55-1.2 1.22-1.2.68 0 1.22.53 1.22
-            1.2v27.56A3.68 3.68 0 0 0 21 64.73h36.04a3.68 3.68 0 0 0 3.7-3.67V33.5a1.22 1.22 0 0 1 2.44
-            0v27.56a6.11 6.11 0 0 1-6.14 6.09Z" fill="#fff">
-          </path>
-          <path d="M39.02 67.15c-.67 0-1.22-.54-1.22-1.21V33.5c0-.67.55-1.2 1.22-1.2.68 0 1.22.53 1.22
-            1.2v32.44c0 .67-.54 1.2-1.22 1.2ZM23.81 21.34a7.8 7.8 0 0 1-3.17-10.6A7.9 7.9 0 0 1 31.3
-            7.6c5.82 3.13 8.96 11.86 9.09 12.23l-2.3.8c-.03-.08-2.96-8.22-7.95-10.9a5.46 5.46 0 0 0-7.36
-            2.17 5.39 5.39 0 0 0 2.2 7.32l-1.17 2.13Z" fill="#fff">
-          </path>
-          <path d="m54.23 21.34-1.16-2.13a5.38 5.38 0 0 0-1.03-9.92 5.43 5.43 0 0 0-4.14.43c-4.98 2.68-7.91
-            10.82-7.94 10.9l-2.3-.8c.13-.37 3.27-9.1 9.08-12.23a7.86 7.86 0 0 1 11.29 9.1c-.6 2-1.95 3.66-3.8
-            4.65ZM61.95 50.93H16.09c-.67 0-1.22-.54-1.22-1.21 0-.67.55-1.21 1.22-1.21h45.86c.67 0 1.22.54 1.22
-            1.21 0 .67-.55 1.21-1.22 1.21Z" fill="#fff">
-          </path>
-        </svg>
-        <p class="promotion__text">Закажите все и получите чехол для кота в подарок!</p>
+      <h2 class="extra-catalog__title">Дополнительные товары</h2>
+      <div class="extra-catalog__wrapper">
+        <ul class="extra-catalog__list">
+          <li class="extra-catalog__extra-card-item extra-card-item">
+            <div class="extra-card-item__wrapper">
+              <h3 class="extra-card-item__title">Сахарозаменитель</h3>
+              <table class="extra-card-item__table">
+                <tbody>
+                  <tr class="extra-card-item__row">
+                    <td class="extra-card-item__feature">1 упаковка (100 г)</td>
+                    <td class="extra-card-item__value">200 ₽</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <a class="extra-card-item__button button" href="#">Заказать</a>
+          </li>
+          <li class="extra-catalog__extra-card-item extra-card-item">
+            <div class="extra-card-item__wrapper">
+              <h3 class="extra-card-item__title">Питьевая вода</h3>
+              <table class="extra-card-item__table">
+                <tbody>
+                  <tr class="extra-card-item__row">
+                    <td class="extra-card-item__feature">5 литров</td>
+                    <td class="extra-card-item__value">50 ₽</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <a class="extra-card-item__button button" href="#">Заказать</a>
+          </li>
+          <li class="extra-catalog__extra-card-item extra-card-item">
+            <div class="extra-card-item__wrapper">
+              <h3 class="extra-card-item__title">Молоко</h3>
+              <table class="extra-card-item__table">
+                <tbody>
+                  <tr class="extra-card-item__row">
+                    <td class="extra-card-item__feature">1 литр</td>
+                    <td class="extra-card-item__value">100 ₽</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <a class="extra-card-item__button button" href="#">Заказать</a>
+          </li>
+          <li class="extra-catalog__extra-card-item extra-card-item">
+            <div class="extra-card-item__wrapper">
+              <h3 class="extra-card-item__title">Витамины</h3>
+              <table class="extra-card-item__table">
+                <tbody>
+                  <tr class="extra-card-item__row">
+                    <td class="extra-card-item__feature">1 упаковка (30 г)</td>
+                    <td class="extra-card-item__value">300 ₽</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <a class="extra-card-item__button button" href="#">Заказать</a>
+          </li>
+        </ul>
+        <div class="extra-catalog__promotion promotion">
+          <div class="promotion__wrapper">
+            <h2 class="visually-hidden">Акция</h2>
+            <svg class="promotion__icon" width="78" height="80" viewBox="0 0 78 80" xmlns="http://www.w3.org/2000/svg"
+              fill="none">
+              <path d="M64.02 34.71H14.03a3.17 3.17 0 0 1-3.18-3.16v-9.47a3.17 3.17 0 0 1 3.18-3.16h49.98a3.17
+                3.17 0 0 1 3.19 3.16v9.47a3.17 3.17 0 0 1-3.18 3.16ZM14.03 21.35c-.4 0-.74.33-.74.73v9.47c0
+                .41.33.74.74.74h49.98c.41 0 .75-.33.75-.74v-9.47c0-.4-.34-.73-.75-.73H14.03Z" fill="#fff">
+              </path>
+              <path d="M57.04 67.15H21a6.11 6.11 0 0 1-6.13-6.09V33.5c0-.67.55-1.2 1.22-1.2.68 0 1.22.53 1.22
+                1.2v27.56A3.68 3.68 0 0 0 21 64.73h36.04a3.68 3.68 0 0 0 3.7-3.67V33.5a1.22 1.22 0 0 1 2.44
+                0v27.56a6.11 6.11 0 0 1-6.14 6.09Z" fill="#fff">
+              </path>
+              <path d="M39.02 67.15c-.67 0-1.22-.54-1.22-1.21V33.5c0-.67.55-1.2 1.22-1.2.68 0 1.22.53 1.22
+                1.2v32.44c0 .67-.54 1.2-1.22 1.2ZM23.81 21.34a7.8 7.8 0 0 1-3.17-10.6A7.9 7.9 0 0 1 31.3
+                7.6c5.82 3.13 8.96 11.86 9.09 12.23l-2.3.8c-.03-.08-2.96-8.22-7.95-10.9a5.46 5.46 0 0 0-7.36
+                2.17 5.39 5.39 0 0 0 2.2 7.32l-1.17 2.13Z" fill="#fff">
+              </path>
+              <path d="m54.23 21.34-1.16-2.13a5.38 5.38 0 0 0-1.03-9.92 5.43 5.43 0 0 0-4.14.43c-4.98 2.68-7.91
+                10.82-7.94 10.9l-2.3-.8c.13-.37 3.27-9.1 9.08-12.23a7.86 7.86 0 0 1 11.29 9.1c-.6 2-1.95 3.66-3.8
+                4.65ZM61.95 50.93H16.09c-.67 0-1.22-.54-1.22-1.21 0-.67.55-1.21 1.22-1.21h45.86c.67 0 1.22.54 1.22
+                1.21 0 .67-.55 1.21-1.22 1.21Z" fill="#fff">
+              </path>
+            </svg>
+            <p class="promotion__text">Закажите все и получите чехол для кота в подарок!</p>
+          </div>
+        </div>
       </div>
     </section>
     <section class="invite-cooperation">
