--- a/source/form.html
+++ b/source/form.html
@@ -98,10 +98,11 @@
                 </svg>
               </label>
               <label class="owner-info__telephone" for="owner-info-telephone">Телефон:*
-                <input class="owner-info__telephone-input" type="tel" name="phone" id="owner-info-telephone "
+                <input class="owner-info__telephone-input" type="tel" name="phone" id="owner-info-telephone"
                   placeholder="8 (960) 900-60-90" pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$"
                   required>
-                <svg class="owner-info__telephone-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="owner-info__telephone-icon" width="20" height="20" viewBox="0 0 20 20" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M10 10H18.5M18.5 10L16 7.5M18.5 10L16 12.5M8.5 2.5V7.5H5.5V12.5H8.5V17.5H6C4.5 17.5 3.5 16.5 3.5 15V5C3.5 3.5 4.5 2.5 6 2.5H8.5Z"
                     stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
