--- a/source/index.html
+++ b/source/index.html
@@ -130,7 +130,13 @@
             <div class="slider__image slider__image--right">
               <img src="img/skinny-boris.png" alt="Кот Борис похудел.">
             </div>
-            <div class="slider__bar"></div>
+            <div class="slider__bar">
+              <div class="slider__arrows">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 18" fill="none">
+                  <path fill="currentColor" d="M8 0 0 9l8 9V0ZM24 9l-8-9v18l8-9Z" />
+                </svg>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -162,7 +168,8 @@
           <li class="socials__item">
             <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">ВКонтакте</span>
-              <svg class="socials__icon" xmlns="http://www.w3.org/2000/svg" width="29" height="22" fill="none" viewBox="0 0 29 22">
+              <svg class="socials__icon" xmlns="http://www.w3.org/2000/svg" width="29" height="22" fill="none"
+                viewBox="0 0 29 22">
                 <g clip-path="url(#a)">
                   <path fill="currentColor"
                     d="M1.5 5.3388c0-.855.5151-1.3161 1.5453-1.3832l3.9699.0252c.2664 0 .444.1257.5328.3772.4085 1.2574.866 2.343 1.3721 3.2567.5063.9136 1.1679 1.9657 1.985 3.156.071.1509.1865.2263.3463.2263.1244 0 .2221-.0586.2931-.176l.0799-.2766.0267-4.3506c0-.3018-.0755-.503-.2265-.6036-.151-.1006-.4307-.176-.8393-.2263-.3197-.0503-.4795-.2347-.4795-.5533 0-.067.0088-.1173.0266-.1508.373-1.0898 1.4387-1.6346 3.1972-1.6346L14.8216 3c.675 0 1.2345.1593 1.6785.4778.4441.3186.6661.8215.6661 1.5089v5.7086c.1244.0838.2398.1257.3464.1257.2664 0 .4973-.1509.6927-.4527 1.9539-2.5818 3.0107-4.3086 3.1706-5.1804 0-.0168.0177-.0587.0532-.1258.1244-.2515.3286-.4694.6128-.6538.2842-.1844.5329-.3102.7461-.3772.071-.0336.1509-.0503.2397-.0503h4.1297l.2665.0251c.3552 0 .6305.1593.8259.4778a.912.912 0 0 1 .1466.327c.0266.1173.0444.2347.0532.352.0089.1174.0134.1844.0134.2012v.176c-.1244.6874-.4397 1.4209-.9459 2.2005-.5062.7796-1.1501 1.622-1.9316 2.5274-.7815.9053-1.27 1.5004-1.4654 1.7855-.1598.2011-.2398.3856-.2398.5532 0 .1341.0711.285.2132.4527l3.8899 4.6272c.2131.2682.3197.5616.3197.8802 0 .3856-.1599.7041-.4796.9556-.3197.2515-.7016.394-1.1456.4275l-.453.0252h-4.0497c-.0178 0-.0533.0041-.1066.0125-.0533.0084-.0888.0126-.1066.0126-.3908 0-.7549-.1593-1.0924-.4778-.1243-.1341-.9591-1.1233-2.5044-2.9675-.0888-.1173-.2132-.2263-.373-.3269-.0711.2683-.1643.6539-.2798 1.1568-.1154.503-.1998.8634-.2531 1.0814l-.0799.4275c-.1776.5868-.5507.9388-1.119 1.0562l-.373.0252h-2.6111c-1.4742 0-2.9441-.6371-4.4094-1.9113-1.4654-1.2742-2.7843-2.9213-3.9566-4.9416-1.1723-2.0202-2.2646-4.3715-3.277-7.054-.0889-.2179-.1333-.461-.1333-.7292Zm16.0126 6.5133c-.373 0-.7105-.0964-1.0125-.2892-.3019-.1928-.4529-.4569-.4529-.7922v-5.784c0-.3353-.0888-.5742-.2664-.7167-.1776-.1425-.4885-.2138-.9325-.2138l-1.5187.0503c-.7638 0-1.341.1258-1.7318.3772.7815.3521 1.1723.9221 1.1723 1.71v4.4261c-.0355.4192-.2132.767-.5329 1.0437-.3197.2766-.6749.4149-1.0657.4149-.5329 0-.9414-.2431-1.2256-.7293-1.3854-1.9783-2.4157-3.856-3.0906-5.6331l-.2398-.6539L3.072 5.037c-.231 0-.3597.0126-.3864.0377-.0266.0252-.04.0964-.04.2138 0 .1509.0178.3101.0534.4778l.5595 1.4083c1.492 3.638 3.1128 6.5049 4.8624 8.6005 1.7495 2.0957 3.468 3.1435 5.1554 3.1435h2.6643c.1066 0 .1865-.0293.2398-.088.0533-.0587.0977-.1718.1332-.3395l.0533-.2515.5063-2.213c.142-.3017.2664-.5029.373-.6035.1953-.1844.4263-.2766.6927-.2766.4263 0 .8614.243 1.3055.7292l2.2647 2.716c.1421.218.2931.3269.4529.3269h4.3961c.5329 0 .7993-.1257.7993-.3772 0-.0838-.0266-.1676-.0799-.2515l-3.8633-4.5517c-.3019-.3521-.4529-.7293-.4529-1.1317s.1421-.788.4263-1.1568c.2309-.3353.6794-.8927 1.3455-1.6723.6661-.7796 1.2478-1.509 1.7451-2.1879.4974-.679.826-1.2951.9858-1.8484l.0799-.3269c-.0177-.0335-.0266-.088-.0266-.1635 0-.0754-.0089-.1383-.0266-.1886h-4.183c-.2665.1006-.4796.2515-.6395.4527l-.1598.4778c-.4441 1.1568-1.6075 2.9423-3.4903 5.3565-.373.3353-.8082.503-1.3055.503Z" />
@@ -178,7 +185,8 @@
           <li class="socials__item">
             <a class="socials__link socials__link--yotube" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">YouTube</span>
-              <svg class="socials__icon" xmlns="http://www.w3.org/2000/svg" width="29" height="22" fill="none" viewBox="0 0 29 22">
+              <svg class="socials__icon" xmlns="http://www.w3.org/2000/svg" width="29" height="22" fill="none"
+                viewBox="0 0 29 22">
                 <path fill="currentColor"
                   d="m18.3509 10.7927-5.2364-3.4909a.6545.6545 0 0 0-1.0145.5455v6.9818a.6544.6544 0 0 0 .3491.5782.643.643 0 0 0 .3373.0764.6429.6429 0 0 0 .3281-.1091l5.2364-3.4909a.6546.6546 0 0 0 0-1.091Zm-4.9418 2.8146V9.0691l3.4036 2.2691-3.4036 2.2691Zm12.48-8.5636a2.4002 2.4002 0 0 0-1.4509-1.6364C20.7182 1.9782 14.7509 2 14.5 2c-.2509 0-6.2182-.0218-9.9382 1.4073A2.4 2.4 0 0 0 3.111 5.0437C2.8273 6.1127 2.5 8.0764 2.5 11.3382s.3273 5.2255.611 6.2945a2.4002 2.4002 0 0 0 1.4508 1.6364c3.72 1.4291 9.6873 1.4073 9.9382 1.4073h.0764c.7527 0 6.3163-.0437 9.8618-1.4073a2.4 2.4 0 0 0 1.4509-1.6364c.2836-1.069.6109-3.0327.6109-6.2945s-.3273-5.2255-.6109-6.2945Zm-1.2655 12.2618a1.0906 1.0906 0 0 1-.6545.7418c-3.4909 1.3418-9.4036 1.32-9.4691 1.32-.0655 0-5.9782.0218-9.469-1.32a1.0904 1.0904 0 0 1-.6546-.7418c-.2618-1.0037-.5673-2.8473-.5673-5.9673 0-3.12.3055-4.9636.5673-5.9673a1.0909 1.0909 0 0 1 .6545-.7418c3.491-1.3418 9.4036-1.32 9.4691-1.32.0655 0 5.9782-.0218 9.4691 1.32a1.0915 1.0915 0 0 1 .6545.7418c.2619 1.0037.5673 2.8473.5673 5.9673 0 3.12-.3054 4.9636-.5673 5.9673Z" />
               </svg>
@@ -187,7 +195,8 @@
           <li class="socials__item">
             <a class="socials__link socials__link--telegram" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Telegram</span>
-              <svg class="socials__icon" xmlns="http://www.w3.org/2000/svg" width="29" height="22" fill="none" viewBox="0 0 29 22">
+              <svg class="socials__icon" xmlns="http://www.w3.org/2000/svg" width="29" height="22" fill="none"
+                viewBox="0 0 29 22">
                 <path fill="currentColor" fill-rule="evenodd"
                   d="M23.9608 3.153a.6565.6565 0 0 1 .2264.6115l-2.6261 15.7569a.6564.6564 0 0 1-1.0118.4383l-7.8785-5.2523a.6566.6566 0 0 1-.1485-.9564l2.6107-3.2633-4.36 2.9067a.6567.6567 0 0 1-.6578.0409l-5.2523-2.6261a.6566.6566 0 0 1 .0728-1.2056l18.3831-6.5653a.6566.6566 0 0 1 .642.1146ZM6.8263 10.3227l3.5354 1.7677 7.5614-5.041a.6565.6565 0 0 1 .8769.9564l-4.805 6.0062 6.4378 4.2918 2.2755-13.6533-15.882 5.6722Z"
                   clip-rule="evenodd" />
@@ -199,7 +208,8 @@
       <div class="page-footer__copyright copyright">
         <a class="copyright__link" href="https://htmlacademy.ru">
           <span class="copyright__name">HTML Academy</span>
-          <svg class="copyright__icon" xmlns="http://www.w3.org/2000/svg" width="27" height="34" fill="none" viewBox="0 0 27 34">
+          <svg class="copyright__icon" xmlns="http://www.w3.org/2000/svg" width="27" height="34" fill="none"
+            viewBox="0 0 27 34">
             <path fill="currentColor" d="M13.64.02 13.5 0 0 1.4v24.61L13.5 34 27 26.01V1.41L13.64 0zm11.6 25L13.5 31.96
               1.77 25V14.94l11.68 6.92.02 1.25-8.02-4.74v1.22l8.04 4.81.02 1.29-8.05-4.76v1.22l8.04
               4.81 8.12-4.83V16.9l3.62-2.15v10.26zm0-11.57L22 15.33l-1.48.88-7.06-4.19-.01 1.22 6.04
